devold/force-app/main/default/objects/QBO_Invoice_Line__c/QBO_Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>QBO Invoice Line</label>
    <nameField>
        <displayFormat>INVLI-{00000000}</displayFormat>
        <label>Invoice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QBO Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>