devold/force-app/main/default/objects/QBO_Invoice_Line__c/fields/QBO_Product__c.field-meta.xml
<CustomField>
    <fullName>QBO_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>