devold/force-app/main/default/objects/QBO_Invoice_Line__c/fields/QBO_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>QBO_Product_Name__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>