devold/force-app/main/default/objects/QBO_Invoice_Line__c/fields/QBO_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>QBO_Unit_Price__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>